--- a/app/templates/First.html
+++ b/app/templates/First.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Two Dropdown Lists</title>
+<title>News Analysis</title>
 <style>
 body {
 font-family: 'Arial', sans-serif;
-background-color: #f4f4f4;
+background-color: Two Dropdown Lists #f4f4f4;
 margin: 0;
 padding: 0;
 display: flex;
