--- a/app/templates/Second_Page.html
+++ b/app/templates/Second_Page.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Two Dropdown Lists</title>
+<title>Choose Date & Sentiment</title>
 <style>
 body {
 font-family: 'Arial', sans-serif;
@@ -68,6 +68,7 @@ background-color: #45a049;
 </head>
 <body>
 <h1>News Sentiment Analysis</h1>
+{%block title%}{{ title }}{% endblock %} {%block content%}
 <form action="/submit" , method="post">
 <div class="dropdown-container">
 <div>
