--- a/app/templates/Second_Page.html
+++ b/app/templates/Second_Page.html
@@ -68,7 +68,7 @@ background-color: #45a049;
 </head>
 <body>
 <h1>News Sentiment Analysis</h1>
-{%block title%}{{ title }}{% endblock %} {%block content%}
+{% block title %}{{ title }}{% endblock %} {%block content%}
 <form action="/submit" , method="post">
 <div class="dropdown-container">
 <div>
@@ -79,7 +79,7 @@ background-color: #45a049;
 </div>
 </div>
 <br><input type="submit" value="Submit">
-</form>
+</form>{%endblock%}
 </body>
 </html>
 
